5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1642_2724.log
== TEST (2019-04-27 21:00:35) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a == b and a == c):
	mensagem = a
else:
	if(b == a and b == c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:01:35) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a >= b and a >= c):
	mensagem = a
else:
	if(b <= a and b <= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:02:06) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a >= b and a >= c):
	mensagem = a
else:
	if(b >= a and b >= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:02:49) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a >= b and a >= c):
	mensagem = a
else:
	if(b >= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:22:49) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:23:04) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.211513
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:23:49) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= a and b >= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:24:27) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:24:35) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.166752
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:14) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a >= b and a >= c):
	mensagem = a
else:
	if(b <= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:26) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a >= b and a >= c):
	mensagem = a
else:
	if(b <= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:25:54) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b <= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:26:33) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a <= b and a <= c):
	mensagem = a
else:
	if(b >= c and b >=a ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:26:54) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a < b and a < c):
	mensagem = a
else:
	if(b > c and b > a ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:27:07) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:27:18) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if(a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.139525
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:41) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:28:50) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.173408
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:30:18) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > c):
	mensagem = c
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = a
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:30:54) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > c):
	mensagem = c
else:
	if(b < c ):
		mensagem = b
	else:
		mensagem = a
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:38) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:33:05) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b and a > c):
	mensagem = a
else:
	if(b < a and b < c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:33:43) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b and a > c):
	mensagem = a
else:
	if(b < c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:33:56) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b and a > c):
	mensagem = a
else:
	if(b < c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:34:25) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >= b and a >= c):
	mensagem = a
else:
	if(b <= c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:36:19) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:36:38) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.243083
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:37:34) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:38:42) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a < c):
	mensagem = a
else:
	if(b > c ):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.145511
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:42:50) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b and a > c):
	mensagem = a
else:
	if(b > c and b > a):
		mensagem = b
	if(c > a and c > b):
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:44:04) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >< b and a >< c):
	mensagem = a
else:
	if(b >< c and b >< a):
		mensagem = b
	if(c >< a and c >< b):
		mensagem = c
	
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if( a >< b and a >< c):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:44:41) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >= b and a >= c):
	mensagem = a
else:
	if(b >= c and b >= a):
		mensagem = b
	if(c >= a and c >= b):
		mensagem = c
	
print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:45:34) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >= b and a >= c):
	mensagem = a
else:
	if(b <= c and b <= a):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:46:03) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >= b and a >= c):
	mensagem = a
else:
	if(b <= c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:46:14) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a >= b and a >= c):
	mensagem = a
else:
	if(b < c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:47:25) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b > a and b < c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:15:49) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b > a and b < c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:16:23) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:16:43) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b > c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:20:50) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < a and b > c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:21:03) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < a and b > c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.128386
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:21:51) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < a and b > c):
		mensagem = b
	else:
		mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:25:01) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < a and b > c):
		mensagem = b
	else:
		if(c < a and c > b):
			mensagem = c
	
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:25:16) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a < b and a > c):
	mensagem = a
else:
	if(b < a and b > c):
		mensagem = b
	else:
		if(c < a and c > b):
			mensagem = c
	
print(mensagem)
-- EXECUTION TIME:
0.198795
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:28:31) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if( a > b and a < c):
	mensagem = a
else:
	if(b > a and b < c):
		mensagem = b
	else:
		if(c > a and c < b):
			mensagem = c
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:41:24) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b<a and b>c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:41:38) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b<a and b>c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- EXECUTION TIME:
0.150785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2724/main.py", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:42:00) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b or a<c):
	mensagem = a
else:
	if (b<a or b>c):
		mensagem = b
	else:
		if (c>a or c<b):
			mensagem = c

print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:42:45) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b<a and b>c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:09) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b>c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:28) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:45:38) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c>a and c<b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:46:44) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c<a and c>b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:46:53) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c<a and c>b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:47:02) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c<a and c>b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:54:51) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a>b and a<c):
	mensagem = a
else:
	if (b>a and b<c):
		mensagem = b
	else:
		if (c<a and c>b):
			mensagem = c

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:58:52) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = a
else:
	if (c<b and c<a and b>a):
		mensagem = b
	else:
		if (b<c and b<a and a>c):
			mensagem = c

print(mensagem)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:00:59) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c

print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:01:09) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c

print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:01:22) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c

print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:01:34) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c

print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:11:09) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
			else:
				if(a>b and a>c and b>c):
					mensagem = b
				else:
					if(a>b and a<c and b>c):
						mensagem = a
print(mensagem)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:11:49) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c and b>c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:12:07) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c and b>c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:12:19) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c and b>c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:12:32) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c and b>c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:12:43) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c and b>c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:15:12) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:15:29) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c):
					mensagem = a
print(mensagem)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:15:41) 
-- CODE:
a = int(input("digite a: "))
b = int(input("digite b: "))
c = int(input("digite c: "))

if (a<b and a<c and c>b):
	mensagem = b
else:
	if (c<b and c<a and b>a):
		mensagem = a
	else:
		if (b<c and b<a and a>c):
			mensagem = c
		else:
			if(a>b and a>c and b>c):
				mensagem = b
			else:
				if(a>b and a<c):
					mensagem = a
print(mensagem)
-- EXECUTION TIME:
0.189077
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
